medical.yaml
apiVersion: v1
kind: Service
metadata:
  name: diagnosis
  labels:
    app: diagnosis
    service: diagnosis
spec:
  ports:
  - port: 8080
    name: http

  selector:
    app: diagnosis
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: diagnosis
  labels:
    app: diagnosis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: diagnosis
  template:
    metadata:
      labels:
        app: diagnosis
    spec:
      containers:
        - name: diagnosis
          image: "user04.azurecr.io/diagnosis:latest"
          ports:
             - containerPort: 8080
