istio-ingressgateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: istio-medical-gateway
spec:
  # The selector matches the ingress gateway pod labels.
  # If you installed Istio using Helm following the standard documentation, this would be "istio=ingress"
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 8080
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: medicalinfo
spec:
  hosts:
  - "*"
  gateways:
  - istio-medical-gateway
  http:
  - match:
    - uri:
        prefix: /diagnoses
    route:
    - destination:
        host: diagnosis
        port:
          number: 8080
